--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     float: left;
 }
 
-.formulario{
+.formulario {
     position: relative;
     top: 40%;
 }
@@ -166,7 +166,43 @@ body {
     width: 220px;
     height: 50px;
     bottom: 7%;
-    right:  5%;
+    right: 5%;
     cursor: pointer;
+
+}
+
+@media only screen and (max-width: 480px) {
+    body {
+        background-color: rgb(139, 138, 146);
+        width: 412px;
+        height: 823px;
+    }
+
+    #operativo {
+        display: block;
+        width: 100%;
+        height: 50%;
+        background-color: #F3F5FC;
+        
+    }
+    
+
+    #ventana-lateral {
+        display: block;
+        width: 100%;
+        height: 50%;
+        left: 50%;
+        background-color: #F3F5FC;
+    }
+
+    .figura {
+        
+        width: 20%;
+        height: 20%;
+        border: 2px solid red;
+        border-radius: 20px;
+        background-color: #F3F5FC;
+        box-shadow: inset 20px 20px 60px 60px rgb(221, 209, 186);
+    }
 
 }
