--- a/style.css
+++ b/style.css
@@ -9,14 +9,54 @@ body {
     width: 100%;
     height: 100%;
     background-color: #F3F5FC;
+    background-image: url(imagenes/22112338_6534510.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+#encabezado {
+    margin: 10px 10px;
+    height: 80px;
+}
+
+#encabezado img {
+    display: inline-block;
+}
+
+#encabezado h1 {
+    position: relative;
+    display: inline-block;
+    left: 10%;
+    top: -20%;
+}
+
+h1 {
+    font-size: 2em;
+    font-weight: bold;
+    font-style: oblique;
+}
+.nombreprogramador{
+    position: relative;
+    display: inline-block;
+    right: -35%;
+    font-size: 1em;
+    font-weight: bold;
+    font-style:italic;
+
 }
 
 #operativo {
     display: flex;
     flex-direction: column;
     width: 70%;
-    height: 100%;
+    height: 90%;
+    border-radius: 10px;
     background-color: #F3F5FC;
+    background-image: url(imagenes/22112338_6534510.jpg);
+    background-size: cover;
+    background-position:center;
+    box-shadow:  20px 20px 60px 60px  rgb(95, 66, 162);
+    box-sizing:content-box;
     float: left;
 }
 
@@ -24,15 +64,22 @@ body {
     display: block;
     position: relative;
     top: 20%;
-    width: 50%;
-    height: 40px;
+    width: 60%;
+    height: 15%;
     margin-left: 25%;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    color: blue;
+    font-size: 30px;
+    color: rgb(157, 157, 212);
+}
+
+.texto-analizar input {
+    width: 50%;
+    height: 30px;
+    font-size: x-large;
 }
 
 .operaciones {
+    display: flex;
     position: relative;
     top: 60%;
     left: 5%;
@@ -40,11 +87,12 @@ body {
 }
 
 .operaciones button {
-    width: 35%;
-    height: 40px;
+    position: relative;
+    width: 40%;
+    height: 60px;
     margin: 0px 40px;
     border-radius: 30px;
-    border: 4px solid black;
+    border: 4px solid rgb(233, 187, 170);
 }
 
 .operacionEncriptar {
@@ -55,42 +103,30 @@ body {
 }
 
 .operacionEncriptar:hover {
-    position: relative;
-    background-color: rgb(175, 180, 142);
-    border-radius: 40px;
-    width: 40%;
-    height: 60px;
-    bottom: 7%;
-    left: 7%;
     cursor: pointer;
-
+    background-size: 90%;
 }
 
 .operacionDesencriptar {
     background-image: url(imagenes/Button\ \(1\).png);
-    background-size: cover;
+    background-size: auto;
     background-position: center;
 }
 
 .operacionDesencriptar:hover {
-    position: relative;
-    background-color: rgb(175, 180, 142);
-    border-radius: 40px;
-    width: 40%;
-    height: 60px;
-    bottom: 7%;
-    right: 7%;
     cursor: pointer;
-
+    background-size: 90%;
 }
 
 #ventana-lateral {
     display: flex;
     flex-direction: column;
     width: 30%;
-    height: 80%;
+    height: 90%;
     left: 50%;
-    background-color: #F3F5FC;
+    box-sizing: content-box;
+    
+    
 }
 
 .figura {
@@ -100,7 +136,17 @@ body {
     height: 100%;
     border-radius: 20px;
     background-color: #F3F5FC;
-    box-shadow: inset 20px 20px 60px 60px rgb(221, 209, 186);
+    background-image: url(imagenes/22112338_6534510.jpg);
+    background-size: cover;
+    background-position: center;
+    /*box-shadow: inset 20px 20px 60px 60px  rgb(221, 209, 186);*/
+    box-shadow:  20px 20px 60px 60px  rgb(95, 66, 162);
+}
+
+.figura h2 {
+    position: absolute;
+    left: 20%;
+    top: 2%;
 }
 
 .texto-encriptado {
@@ -116,7 +162,7 @@ body {
 
 
 .texto-encriptado p {
-    width: 70%;
+    width: 40%;
     height: 40px;
     font-weight: bold;
     margin-bottom: 20px;
@@ -159,7 +205,7 @@ body {
     box-sizing: border-box;
     width: 80%;
     top: 87%;
-    left: 12%;
+    left: 18%;
     margin-top: 5%;
 }
 
@@ -174,21 +220,8 @@ body {
 
 }
 
-.copiar button:hover {
-    position: relative;
-    background-color: rgb(175, 180, 142);
-    border-radius: 40px;
-    width: 220px;
-    height: 50px;
-    bottom: 7%;
-    right: 5%;
-    cursor: pointer;
 
-}
-
-
-
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 820px) {
     html {
         width: 100vw;
         height: 100vh;
@@ -204,7 +237,20 @@ body {
     }
 
     #encabezado {
-        margin: 40px 10px;
+        margin: 10px 10px;
+        height: 80px;
+    }
+
+    #encabezado h1 {
+        position: relative;
+        display: inline-block;
+        left: -5%;
+    }
+
+    h1 {
+        font-size: 17px;
+        font-weight: bold;
+        font-style: oblique;
     }
 
     #operativo {
@@ -219,56 +265,41 @@ body {
     .texto-analizar {
         display: block;
         position: relative;
-        top: 20%;
-        width: 50%;
+        top: 5%;
+        width: 70%;
         height: 40px;
         margin-left: 25%;
+
+    }
+
+    .texto-analizar label {
+        margin-bottom: 5px;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 20px;
         color: blue;
     }
 
+    .texto-analizar input {
+        margin-top: 5px;
+        width: 70%;
+        height: 30px;
+        font-size: x-large;
+    }
+
     .operaciones {
-        position: relative;
+        display: block;
         top: 30%;
-        left: 5%;
+        left: 15%;
         width: 80%;
     }
 
     .operaciones button {
+        position: relative;
         width: 80%;
-        height: 40px;
-        margin: 0 40px;
-        border-radius: 30px;
-        border: 4px solid black;
-    }
-
-
-    .operacionEncriptar:hover {
-        position: relative;
-        background-color: rgb(214, 217, 200);
-        border-bottom-style: dashed;
+        height: 60px;
+        margin: 5px 5px;
         border-color: blue;
-        border-radius: 40px;
-        /*width: 40%;
-        height: 60px;
-        bottom: 7%;
-        left: 7%;*/
-        cursor: pointer;
-
-    }
-
-
-    .operacionDesencriptar:hover {
-        position: relative;
-        background-color: rgb(175, 180, 142);
-        border-radius: 40px;
-        /*width: 40%;
-        height: 60px;
-        bottom: 7%;
-        right: 7%;*/
-        cursor: pointer;
-
+        border-radius: 20px;
     }
 
     #ventana-lateral {
@@ -289,10 +320,16 @@ body {
 
     }
 
+    .figura h2 {
+        position: absolute;
+        left: 30%;
+        bottom: 40%;
+    }
+
     .texto-encriptado {
         display: block;
         position: relative;
-        top: -10%;
+        top: 10%;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 20px;
         color: #000000;
@@ -300,20 +337,15 @@ body {
     }
 
     .muñeco {
-        width: 50%;
-        height: 40%;
-        top: 15%;
-        margin-top: 20px;
-        margin-left: 20%;
-        margin-right: 25%;
-        margin-bottom: 5%;
-
+        width: 0%;
+        height: 0%;
     }
 
     #verMensaje {
+        position: absolute;
         width: 50%;
         height: 80px;
-        bottom: 10%;
+        bottom: 30%;
         left: 23%;
         margin-bottom: 5%;
         visibility: hidden;
@@ -321,7 +353,7 @@ body {
 
     .copiar {
         box-sizing: border-box;
-        top: 80%;
+        top: 60%;
         left: 15%;
         margin-top: 5%;
     }
