commit 4 pagina cargada

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ h1 {
 
 .operacionEncriptar:hover {
     cursor: pointer;
-    background-size: 90%;
+    height: 80px;
 }
 
 .operacionDesencriptar {
@@ -116,7 +116,7 @@ h1 {
 
 .operacionDesencriptar:hover {
     cursor: pointer;
-    background-size: 90%;
+    height: 80px;;
 }
 
 #ventana-lateral {
@@ -219,6 +219,11 @@ h1 {
     border-radius: 10px;
     font-weight: bold;
 
+}
+
+.copiar button:hover {
+    cursor: pointer;
+    height: 50px;
 }
 
 
