--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ h1 {
 
 #operativo {
     display: flex;
-    flex-direction: column;
     width: 70%;
     height: 90%;
     border-radius: 10px;
@@ -65,16 +64,16 @@ h1 {
     display: block;
     position: relative;
     top: 20%;
-    width: 60%;
+    width: 80%;
     height: 15%;
-    margin-left: 25%;
+    left: 35%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     color: rgb(157, 157, 212);
 }
 
 .texto-analizar input {
-    width: 50%;
+    width: 70%;
     height: 30px;
     font-size: x-large;
 }
@@ -82,14 +81,14 @@ h1 {
 .operaciones {
     display: flex;
     position: relative;
-    top: 60%;
-    left: 5%;
-    width: 80%;
+    top: 80%;
+    right: 20%;
+    width: 100%;
 }
 
 .operaciones button {
     position: relative;
-    width: 40%;
+    width: 50%;
     height: 60px;
     margin: 0px 40px;
     border-radius: 30px;
@@ -100,7 +99,6 @@ h1 {
     background-image: url("imagenes/Button.png");
     background-size: cover;
     background-position: center;
-
 }
 
 .operacionEncriptar:hover {
@@ -116,7 +114,8 @@ h1 {
 
 .operacionDesencriptar:hover {
     cursor: pointer;
-    height: 80px;;
+    height: 80px;
+    ;
 }
 
 #ventana-lateral {
@@ -227,8 +226,8 @@ h1 {
 }
 
 
-@media  screen and (max-width: 820px) {
-   
+@media screen and (max-width: 820px) {
+
     body {
         display: flex;
         flex-direction: column;
@@ -254,7 +253,7 @@ h1 {
         font-weight: bold;
         font-style: oblique;
     }
- 
+
     .nombreprogramador {
         position: relative;
         display: block;
@@ -264,7 +263,7 @@ h1 {
         font-style: italic;
 
     }
-    
+
     #operativo {
         display: flex;
         width: 100%;
@@ -277,10 +276,10 @@ h1 {
     .texto-analizar {
         display: block;
         position: relative;
-        top: 5%;
-        width: 70%;
+        top: 10%;
+        width: 100%;
         height: 40px;
-        margin-left: 25%;
+        left: 30%;
 
     }
 
@@ -300,15 +299,15 @@ h1 {
 
     .operaciones {
         display: block;
-        top: 30%;
-        left: 15%;
-        width: 80%;
+        top: 45%;
+        right: 28%;
+        width: 100%;
     }
 
     .operaciones button {
         position: relative;
-        width: 80%;
-        height: 60px;
+        width: 100%;
+        height: 50px;
         margin: 5px 5px;
         border-color: blue;
         border-radius: 20px;
@@ -355,11 +354,11 @@ h1 {
         color: #000000;
         margin-bottom: 20px;
     }
-    
+
     .muñeco {
         width: 0%;
         height: 0%;
-        visibility: hidden;
+        display: none;
     }
 
     #verMensaje {
@@ -368,7 +367,6 @@ h1 {
         height: 80px;
         bottom: 30%;
         left: 23%;
-        /*margin-bottom: 5%;*/
         visibility: hidden;
     }
 
